Fix footer alignment of detail datagrid in datagrid (#2753)

--- a/src/clr-addons/themes/phs/_css.overrides.scss
+++ b/src/clr-addons/themes/phs/_css.overrides.scss
@@ -313,3 +313,8 @@
     display: none;
   }
 }
+
+// datagrid detail pagination should be displayed right-aligned
+.datagrid-detail-pane .pagination {
+  width: auto;
+}
